--- a/04-accordeon-horizontal.html
+++ b/04-accordeon-horizontal.html
@@ -1,12 +1,106 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Accordéon horizontal</title>
-  </head>
-  <body>
-    <h1>Accordéon horizontal</h1>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Accordéon horizontal</title>
+  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+  <style>
+    #accordeon {
+      /* pour que les éléments soient alignés horizontalement */
+      display: flex;
+      /* pour éviter les marges par défaut */
+      margin: 0;
+      /* pour éviter les "padding" par défaut */
+      padding: 0;
+    }
+
+    #accordeon li {
+      /* largeur de chaque élément replié 107px */
+      width: 107px;
+      /* pour cacher le contenu dépassant de l'élément */
+      overflow: hidden;
+      /* pour l'animation, transition sur width */
+      transition: width 0.5s ease-in-out;
+      /* couleur de fond #eee */
+      background-color: #eee;
+      /* pour enlever les puces */
+      list-style: none;
+      /* pour espacer les éléments, marge de 3px */
+      margin: 3px;
+      /* pour espacer le contenu, padding de 5px */
+      padding: 3px;
+      /* pour arrondir les bords de 5px */
+      border-radius: 5px;
+    }
+
+    #accordeon li.actif {
+      /* largeur de l'élément déplié 317px */
+      width: 317px;
+    }
+
+    #accordeon li figure {
+      /* pour éviter les marges par défaut */
+      margin: 0;
+      /* pour que les éléments soient alignés horizontalement */
+      display: flex;
+      /* largeur de l'élément intrérieur de 317px (= déplié) */
+      width: 317px;
+    }
+
+    #accordeon li figure figcaption {
+      /* largeur du texte de 200px */
+      width: 200px;
+      /* pour espacer le texte, padding de 10px */
+      padding: 10px;
+      /* pour que les éléments soient alignés verticalement */
+      display: flex;
+      /* espace entre les éléments */
+      flex-direction: column;
+    }
+
+    /* Sur tous les enfants de figcation */
+    #accordeon li figure figcaption>* {
+      /* pour éviter les marges par défaut */
+      margin: 0;
+      /* pour éviter les "padding" par défaut */
+      padding: 0;
+    }
+  </style>
+</head>
+
+<body>
+  <h1>Accordéon horizontal</h1>
+  <ul id="accordeon">
+    <li>
+      <figure>
+        <img src="https://picsum.photos/100?random=1" alt="" width="102">
+        <figcaption>
+          <h3>Lorem, ipsum dolor.</h3>
+          <p>Lorem ipsum dolor sit amet consectetur.</p>
+        </figcaption>
+      </figure>
+    </li>
+    <li class="actif">
+      <figure>
+        <img src="https://picsum.photos/100?random=2" alt="" width="102">
+        <figcaption>
+          <h3>Ad, nostrum aliquid?</h3>
+          <p>Ipsum hic possimus a delectus incidunt.</p>
+        </figcaption>
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <img src="https://picsum.photos/100?random=3" alt="" width="102">
+        <figcaption>
+          <h3>Officia, dolorum voluptatibus.</h3>
+          <p>Veniam quisquam autem ipsum laboriosam veritatis.</p>
+        </figcaption>
+      </figure>
+    </li>
+  </ul>
+</body>
 </html>
