ajout des onglets cliquable

--- a/04-accordeon-horizontal.html
+++ b/04-accordeon-horizontal.html
@@ -73,8 +73,10 @@
 
 <body>
   <h1>Accordéon horizontal</h1>
-  <ul id="accordeon">
-    <li>
+  <ul id="accordeon"
+    x-data="{
+      isOpen: 1}">
+    <li :class="{actif:isOpen === 1,}" @click ="isOpen = 1">
       <figure>
         <img src="https://picsum.photos/100?random=1" alt="" width="102">
         <figcaption>
@@ -83,7 +85,7 @@
         </figcaption>
       </figure>
     </li>
-    <li class="actif">
+    <li :class="{actif:isOpen === 2,}" @click ="isOpen = 2">
       <figure>
         <img src="https://picsum.photos/100?random=2" alt="" width="102">
         <figcaption>
@@ -92,7 +94,7 @@
         </figcaption>
       </figure>
     </li>
-    <li>
+    <li :class="{actif:isOpen === 3,}" @click ="isOpen = 3">
       <figure>
         <img src="https://picsum.photos/100?random=3" alt="" width="102">
         <figcaption>
