--- a/05-onglets.html
+++ b/05-onglets.html
@@ -5,13 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Onglets</title>
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <style>
-      .box {
-        border: 1px solid #aaa9a9;
+      #onglets div {
         padding: 1rem;
-        margin-bottom: 1rem;
-        
       }
+      #onglets div div {
+        position: absolute;
+        display: none;
+      }
+      #onglets div div.actif {
+        display: block;
+        border: 2px solid #862424;
+        block-size: auto;
+      }*/
     </style>
   </head>
   <body>
@@ -25,8 +32,8 @@
     }">
     <ul role="tablist">
       <li role="tab" :class="{actif:ouvert === 1,}" @click="ouvert = 1"><button>Panneau 1</button></li>
-      <li role="tab" :class="{actif:ouvert === 1,}" @click="ouvert = 2"><button>Panneau 2</button></li>
-      <li role="tab" :class="{actif:ouvert === 1,}" @click="ouvert = 3"><button>Panneau 3</button></li>
+      <li role="tab" :class="{actif:ouvert === 2,}" @click="ouvert = 2"><button>Panneau 2</button></li>
+      <li role="tab" :class="{actif:ouvert === 3,}" @click="ouvert = 3"><button>Panneau 3</button></li>
     </ul>
     <div>
       <div role="tabpanel" :class="{actif:ouvert === 1,}">
